--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -277,7 +277,7 @@ textarea::placeholder {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 415px) {
   .totals-container > div {
     padding: 0;
   }
@@ -285,6 +285,7 @@ textarea::placeholder {
   .welcome-header {
     font-size: 4rem;
     overflow-wrap: break-word;
+    padding: 0 20px 20px 20px;
   }
   h3 {
     font-size: 2rem;
